syntax = "proto3";

package pb;

import "signature.proto";

message Message {
    pb.Signature signature = 1;
    UnSignMessage unsign_message = 2;
}

message UnSignMessage {
    int64 chain_id = 1;
    int64 nonce = 2;
    int64 time = 3;
    string sender = 4;
}
